<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cyan_200"
    tools:context=".HintActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:background="@color/cyan_200">

        <ImageButton
            android:onClick="ClickBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"
            android:background="@color/cyan_200"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Bantuan"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/ask_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_contact_support_24"
            android:background="@color/cyan_200"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/wellcome"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/cyan_500"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:gravity="left"
                        android:text="J-Cashier Mobile"
                        android:textSize="28dp"
                        android:textStyle="bold"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/cyan_500"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Daftar Produk"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/main"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/grey"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Detail Produk"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/order"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/grey"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Keranjang Belanja"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/cart"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/grey"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hitung Uang Kembalian"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/calculation"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/grey"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Kirim Laporan"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/sendreport"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/grey"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hapus Database"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/deletedatabase"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/grey"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Produk"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/product"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/grey"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tentang Aplikasi"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/about"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/grey"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Keluar"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/exit"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/grey"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>